--- a/config/kibana.yml
+++ b/config/kibana.yml
@@ -1,10 +1,10 @@
 # Kibana is served by a back end server. This setting specifies the port to use.
-#server.port: 5601
+server.port: 5601
 
 # Specifies the address to which the Kibana server will bind. IP addresses and host names are both valid values.
 # The default is 'localhost', which usually means remote machines will not be able to connect.
 # To allow connections from remote users, set this parameter to a non-loopback address.
-#server.host: "localhost"
+server.host: "localhost"
 
 # Enables you to specify a path to mount Kibana at if you are running behind a proxy.
 # Use the `server.rewriteBasePath` setting to tell Kibana if it should remove the basePath
@@ -22,10 +22,10 @@
 #server.maxPayloadBytes: 1048576
 
 # The Kibana server's name.  This is used for display purposes.
-#server.name: "your-hostname"
+server.name: "kibana.local"
 
 # The URLs of the Elasticsearch instances to use for all your queries.
-#elasticsearch.hosts: ["http://localhost:9200"]
+elasticsearch.hosts: ["http://localhost:9200"]
 
 # When this setting's value is true Kibana uses the hostname specified in the server.host
 # setting. When the value of this setting is false, Kibana uses the hostname of the host
@@ -43,8 +43,8 @@
 # the username and password that the Kibana server uses to perform maintenance on the Kibana
 # index at startup. Your Kibana users still need to authenticate with Elasticsearch, which
 # is proxied through the Kibana server.
-#elasticsearch.username: "kibana_system"
-#elasticsearch.password: "pass"
+elasticsearch.username: "admin"
+elasticsearch.password: "admin"
 
 # Enables SSL and paths to the PEM-format SSL certificate and SSL key files, respectively.
 # These settings enable SSL for outgoing requests from the Kibana server to the browser.
@@ -94,7 +94,7 @@
 #pid.file: /var/run/kibana.pid
 
 # Enables you to specify a file where Kibana stores log output.
-#logging.dest: stdout
+logging.dest: stdout
 
 # Set the value of this setting to true to suppress all logging output.
 #logging.silent: false
@@ -113,3 +113,17 @@
 # Specifies locale to be used for all localizable strings, dates and number formats.
 # Supported languages are the following: English - en , by default , Chinese - zh-CN .
 #i18n.locale: "en"
+optimize.sourceMaps: true
+elasticsearch.requestHeadersWhitelist: ["securitytenant", "Authorization"]
+
+opendistro_security.multitenancy.enabled: true
+opendistro_security.multitenancy.tenants.preferred: ["Private", "Global"]
+opendistro_security.readonly_mode.roles: ["kibana_read_only"]
+
+# Use this setting if you are running kibana without https
+opendistro_security.cookie.secure: false
+opendistro_security.basicauth.login.title: "Please login to Cloudsnoop's Analytics platform"
+#opendistro_security.basicauth.login.subtitle: ""
+#opendistro_security.basicauth.login.buttonstyle: ""
+opendistro_security.ui.basicauth.login.showbrandimage: true
+opendistro_security.ui.basicauth.login.brandimage: https://mk0wesecureappxd7u2i.kinstacdn.com/wp-content/uploads/2020/08/WeSecureApp-Logo-2.svg
