--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "checkLicenses": "node scripts/check_licenses --dev",
     "build": "node scripts/build --all-platforms",
     "start": "node scripts/kibana --dev",
-    "debug": "node --nolazy --inspect scripts/kibana --dev",
+    "debug": "node --nolazy --inspect scripts/kibana --dev --oss",
     "debug-break": "node --nolazy --inspect-brk scripts/kibana --dev",
     "lint": "yarn run lint:es && yarn run lint:sass",
     "lint:es": "node scripts/eslint",
